Resized btn, reworded and centered headers

--- a/index.html
+++ b/index.html
@@ -68,13 +68,20 @@
             <div id='space-holder'></div>
             <div class="section dark center">
                 <img class="logo" src="static/assets/images/CarnivalBannerHanging.png">
-                <h4 class="fall2018" class="center">Thank you for a great
-                    HackNC!</h4>
-                <a class='btn-large form-btn'
-                    href="https://goo.gl/forms/cdYjP77M9FQT30xP2" target="_blank">Pre-register for
-                    HackNC 2019</a>
-                <a class="btn-large modal-trigger form-btn"
-                   href="#sponsor-btn">Sponsor HackNC 2019</a>
+                <div class="container">
+                    <h4 class="fall2018" class="center">Thanks for making HackNC 2018 a success!</h4>
+                    <div class="row">
+                        <div class="col s12">
+                            <a class='valign-wrapper btn-large form-btn'
+                                href="https://goo.gl/forms/cdYjP77M9FQT30xP2" target="_blank">Pre-register for
+                                HackNC 2019</a>
+                        </div>
+                        <div class="col s12">
+                            <a class="valign-wrapper btn-large modal-trigger form-btn"
+                            href="#sponsor-btn">Sponsor HackNC 2019</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -112,7 +119,7 @@
             <div class="section sponsors">
                 <a class="nav-anchor" id="sponsors"></a>
                 <div class="container">
-                    <h2>We Thank Our Sponsors</h2>
+                    <h2 class="center">Thanks to our Sponsors</h2>
                     <div class='center'>
                         <div class="row sponsor-row">
                             <div class="col m12 l6 center">
@@ -395,98 +402,100 @@
 
             <div class="section light faq">
                 <a class="nav-anchor" id="faq"></a>
-                <div class="container row">
-                    <h2 class="col s12">FAQ</h2>
-                    <div class="col s12 m6 l6">
-                        <ul class="collapsible">
-                            <li>
-                                <div class="collapsible-header"><h6>What is a hackathon?</h6></div>
-                                <div class="collapsible-body"><p>A hackathon is a weekend of fun and learning. You'll become a better programmer, meet awesome people,
-                                    and make cool stuff. There will also be opportunities to win cool prizes and network with our sponsors.</p></div>
-                            </li>
-                        </ul>
-                        <ul class="collapsible">
-                            <li>
-                                <div class="collapsible-header"><h6>What if I'm in high school?</h6></div>
-                                <div class="collapsible-body"><p>As long as you'll be 18 by October 6th 2018, we would love for you to come to HackNC. Unfortunately
-                                    (because of the incredible amount of paperwork involved) we won't be able to accept anyone under the
-                                    age of 18.</p></div>
-                            </li>
-                        </ul>
-                        <ul class="collapsible">
-                            <li>
-                                <div class="collapsible-header"><h6>Can I hack?</h6></div>
-                                <div class="collapsible-body"><p>High schoolers over 18, undergraduates, and graduate students are welcome to participate as hackers. Professionals
-                                    should check out mentorship.</p></div>
-                            </li>
-                        </ul>
-                        <ul class="collapsible">
-                            <li>
-                                <div class="collapsible-header"><h6>How do I get in?</h6></div>
-                                <div class="collapsible-body"><p>Anyone can attend HackNC. Our admission criteria doesn't include your level of experience. <a href="https://hacknc.typeform.com/to/vum1rA">Go here to register now!</a></p></div>
-                            </li>
-                        </ul>
-                        <ul class="collapsible">
-                            <li>
-                                <div class="collapsible-header"><h6>Got any hardware?</h6></div>
-                                <div class="collapsible-body"><p>You bet! MLH is providing the <a href="https://mlh.io/hardware-lab"></a>full hardware lab</a>. In addition,
-                                we will have soldering kits and other assorted components, Arduinos, Raspberry Pis, sensors, and more
-                                stickers than you can wear on four limbs...</p></div>
-                            </li>
-                        </ul>
-                        <ul class="collapsible">
-                            <li>
-                                <div class="collapsible-header"><h6>Can I mentor?</h6></div>
-                                <div class="collapsible-body"><p>Professionals are welcome to join as mentors, sponsors, or lecturers. If you want to come as a mentor,
-                                    contact us!</p></div>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col s12 m6 l6">
-                        <ul class="collapsible">
-                            <li>
-                                <div class="collapsible-header"><h6>Will I fit in?</h6></div>
-                                <div class="collapsible-body"><p>Definitely! HackNC and the UNC Computer Science Department are committed to making computer science a
-                                    more diverse field. Inclusiveness is a top priority for us, and we've been beginner-friendly from the
-                                    start.
-                                    </p></div>
-                            </li>
-                        </ul>
-                        <ul class="collapsible">
-                            <li>
-                                <div class="collapsible-header"><h6>Can I use old code?</h6></div>
-                                <div class="collapsible-body"><p>You may use all the publicly available code and APIs that you want, but the code you will be judged on
-                                    at the end of the hackathon must be new.</p></div>
-                            </li>
-                        </ul>
-                        <ul class="collapsible">
-                            <li>
-                                <div class="collapsible-header"><h6>What about sleep?</h6></div>
-                                <div class="collapsible-body"><p>You should do it! Bring your own pillow and sleeping bag or blankets. There will be a sleeping space available
-                                    Friday and Saturday nights. More info available on our travel page.</p></div>
-                            </li>
-                        </ul>
-                        <ul class="collapsible">
-                            <li>
-                                <div class="collapsible-header"><h6>Travel costs?</h6></div>
-                                <div class="collapsible-body"><p>If you want to come, we want to help get you here. We will have a limited number of reimbursements for
-                                    carpooling.
-                                    </p></div>
-                            </li>
-                        </ul>
-                        <ul class="collapsible">
-                            <li>
-                                <div class="collapsible-header"><h6>Will there be food?</h6></div>
-                                <div class="collapsible-body"><p>Don’t worry - we’ll provide six full meals throughout the hackathon and there will be plenty of snacks
-                                    in between. You won’t be hungry.</p></div>
-                            </li>
-                        </ul>
-                        <ul class="collapsible">
-                            <li>
-                                <div class="collapsible-header"><h6>How can I volunteer or mentor?</h6></div>
-                                <div class="collapsible-body"><p>Please join our mailing list above, we will send out information later this fall.</p></div>
-                            </li>
-                        </ul>
+                <div class="container">
+                    <h2 class="center">FAQ</h2>
+                    <div class="center row">
+                        <div class="col s12 m6 l6">
+                            <ul class="collapsible">
+                                <li>
+                                    <div class="collapsible-header"><h6>What is a hackathon?</h6></div>
+                                    <div class="collapsible-body"><p>A hackathon is a weekend of fun and learning. You'll become a better programmer, meet awesome people,
+                                        and make cool stuff. There will also be opportunities to win cool prizes and network with our sponsors.</p></div>
+                                </li>
+                            </ul>
+                            <ul class="collapsible">
+                                <li>
+                                    <div class="collapsible-header"><h6>What if I'm in high school?</h6></div>
+                                    <div class="collapsible-body"><p>As long as you'll be 18 by October 6th 2018, we would love for you to come to HackNC. Unfortunately
+                                        (because of the incredible amount of paperwork involved) we won't be able to accept anyone under the
+                                        age of 18.</p></div>
+                                </li>
+                            </ul>
+                            <ul class="collapsible">
+                                <li>
+                                    <div class="collapsible-header"><h6>Can I hack?</h6></div>
+                                    <div class="collapsible-body"><p>High schoolers over 18, undergraduates, and graduate students are welcome to participate as hackers. Professionals
+                                        should check out mentorship.</p></div>
+                                </li>
+                            </ul>
+                            <ul class="collapsible">
+                                <li>
+                                    <div class="collapsible-header"><h6>How do I get in?</h6></div>
+                                    <div class="collapsible-body"><p>Anyone can attend HackNC. Our admission criteria doesn't include your level of experience. <a href="https://hacknc.typeform.com/to/vum1rA">Go here to register now!</a></p></div>
+                                </li>
+                            </ul>
+                            <ul class="collapsible">
+                                <li>
+                                    <div class="collapsible-header"><h6>Got any hardware?</h6></div>
+                                    <div class="collapsible-body"><p>You bet! MLH is providing the <a href="https://mlh.io/hardware-lab"></a>full hardware lab</a>. In addition,
+                                    we will have soldering kits and other assorted components, Arduinos, Raspberry Pis, sensors, and more
+                                    stickers than you can wear on four limbs...</p></div>
+                                </li>
+                            </ul>
+                            <ul class="collapsible">
+                                <li>
+                                    <div class="collapsible-header"><h6>Can I mentor?</h6></div>
+                                    <div class="collapsible-body"><p>Professionals are welcome to join as mentors, sponsors, or lecturers. If you want to come as a mentor,
+                                        contact us!</p></div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col s12 m6 l6">
+                            <ul class="collapsible">
+                                <li>
+                                    <div class="collapsible-header"><h6>Will I fit in?</h6></div>
+                                    <div class="collapsible-body"><p>Definitely! HackNC and the UNC Computer Science Department are committed to making computer science a
+                                        more diverse field. Inclusiveness is a top priority for us, and we've been beginner-friendly from the
+                                        start.
+                                        </p></div>
+                                </li>
+                            </ul>
+                            <ul class="collapsible">
+                                <li>
+                                    <div class="collapsible-header"><h6>Can I use old code?</h6></div>
+                                    <div class="collapsible-body"><p>You may use all the publicly available code and APIs that you want, but the code you will be judged on
+                                        at the end of the hackathon must be new.</p></div>
+                                </li>
+                            </ul>
+                            <ul class="collapsible">
+                                <li>
+                                    <div class="collapsible-header"><h6>What about sleep?</h6></div>
+                                    <div class="collapsible-body"><p>You should do it! Bring your own pillow and sleeping bag or blankets. There will be a sleeping space available
+                                        Friday and Saturday nights. More info available on our travel page.</p></div>
+                                </li>
+                            </ul>
+                            <ul class="collapsible">
+                                <li>
+                                    <div class="collapsible-header"><h6>Travel costs?</h6></div>
+                                    <div class="collapsible-body"><p>If you want to come, we want to help get you here. We will have a limited number of reimbursements for
+                                        carpooling.
+                                        </p></div>
+                                </li>
+                            </ul>
+                            <ul class="collapsible">
+                                <li>
+                                    <div class="collapsible-header"><h6>Will there be food?</h6></div>
+                                    <div class="collapsible-body"><p>Don’t worry - we’ll provide six full meals throughout the hackathon and there will be plenty of snacks
+                                        in between. You won’t be hungry.</p></div>
+                                </li>
+                            </ul>
+                            <ul class="collapsible">
+                                <li>
+                                    <div class="collapsible-header"><h6>How can I volunteer or mentor?</h6></div>
+                                    <div class="collapsible-body"><p>Please join our mailing list above, we will send out information later this fall.</p></div>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -494,7 +503,7 @@
             <div class="section dark travel">
                 <a class="nav-anchor" id="travel"></a>
                 <div class="container">
-                    <h2>Travel</h2>
+                    <h2 class="center">Travel</h2>
                     <div class='row'>
                         <div class='col s12'>
                             <p>Details about the travel-reimbursmenents process
@@ -558,8 +567,8 @@
         <footer class="section light contact page-footer">
             <div class="container">
                 <a class="nav-anchor" id="contact"></a>
-                <h2>Contact</h2>
-                <div class="row">
+                <h2 class="center">Contact</h2>
+                <div class="center row">
                     <div class="col s12"><a href="https://www.facebook.com/thehacknc/">
                             <i class="fab fa-facebook-square"></i><span> Facebook</span></a>
                     </div>
