remove hacknc2018 specific dates

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                             <ul class="collapsible">
                                 <li>
                                     <div class="collapsible-header"><h6>What if I'm in high school?</h6></div>
-                                    <div class="collapsible-body"><p>As long as you'll be 18 by October 6th 2018, we would love for you to come to HackNC. Unfortunately
+                                    <div class="collapsible-body"><p>As long as you'll be 18 by the start of the event, we would love for you to come to HackNC. Unfortunately
                                         (because of the incredible amount of paperwork involved) we won't be able to accept anyone under the
                                         age of 18.</p></div>
                                 </li>
@@ -528,7 +528,7 @@
                                 <li>RSVP via the link in your email</li>
                                 <li>Drive yourself and at least 2 passengers to HackNC.</li>
                                 <li>Submit a project at the end of HackNC.</li>
-                                <li>Submit a copy of gas receipts by Oct 7th 2018.</li>
+                                <li>Submit a copy of gas receipts.</li>
                             </ol>
                         </div>
                     </div>
